libaio (0.3.113-4) UNRELEASED; urgency=medium

  * Switch to Standards-Version 4.6.2 (no changes needed).
  * Do not trim debian/changelog.

 -- Guillem Jover <guillem@debian.org>  Thu, 12 Jan 2023 23:35:18 +0100

libaio (0.3.113-3) unstable; urgency=medium

  * Add upstream/metadata fields for bug submitting and database.
  * Update lintian overrides.
  * Switch to Standards-Version 4.6.1 (no changes needed).
  * Move debian/copyright Source field immediately after Format field.
  * Export DEB_BUILD_MAINT_OPTIONS and DEB_CFLAGS_MAINT_PREPEND.
  * Switch from hardening=+bindnow to hardening=+all.
  * Enable future=+lfs build feature as it does not affect the shared library
    ABI, but affects the test harness.

 -- Guillem Jover <guillem@debian.org>  Sun, 04 Dec 2022 18:06:09 +0100

libaio (0.3.113-2) unstable; urgency=medium

  * Skip new test case 23, which was added upstream for a kernel regression,
    so we are not worse off than before. Its failure was known and being
    looked at upstream.

 -- Guillem Jover <guillem@debian.org>  Tue, 19 Apr 2022 15:57:07 +0200

libaio (0.3.113-1) unstable; urgency=medium

  * New upstream release.
    - Remove patches taken from upstream, now unneeded.
    - Remove -Werror removal patch, as we override CFLAGS.
    - Refresh patches.
    - Update copyright years.
  * Add support for the noudeb build profile.

 -- Guillem Jover <guillem@debian.org>  Tue, 19 Apr 2022 03:22:49 +0200

libaio (0.3.112-13) unstable; urgency=medium

  * Pass CPPFLAGS to linker command, which as a side effect makes the
    build reproducible on differing build pathnames.

 -- Guillem Jover <guillem@debian.org>  Thu, 11 Nov 2021 04:56:01 +0100

libaio (0.3.112-12) unstable; urgency=medium

  * Add patch from upstream to fix test suite warning with gcc-11.
  * Fix LTO build by using symver function attribute instead of .symver
    __asm__ statement. (Closes: #998309)

 -- Guillem Jover <guillem@debian.org>  Wed, 03 Nov 2021 00:56:45 +0100
